# not-br-rust

./: Cargo.toml  README.md
examples/: CMakeLists.txt  simple-example.c
examples/c-example/: .gitignore  CMakeLists.txt  README.md  simple-example.c
examples/node-backend/: index.mjs  package-lock.json  package.json
examples/node-frontend/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
examples/python/: README.md  example.py  requirements.txt
not-br-cli/: Cargo.toml
not-br-cli/src/: main.rs
not-br-ffi/: Cargo.toml  build.rs
not-br-ffi/include/: notbr.h
not-br-ffi/src/: lib.rs
not-br-lib/: Cargo.toml
not-br-lib/src/: lib.rs
not-br-node/: .gitignore  Cargo.toml  package.json
not-br-node/.github/workflows/: CI.yml
not-br-node/src/: lib.rs
not-br-python/: .gitignore  Cargo.toml  pyproject.toml
not-br-python/src/: lib.rs
not-br-wasm/: Cargo.toml
not-br-wasm/src/: lib.rs
